Implementing the update method and the first test for empty product